--- a/themes/zephyr/front-end/src/html/sector-expertise.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise.html
@@ -205,7 +205,7 @@
         </div>
       </section>
       <!-- contact-us -->
-      <section class="component-contact-us">
+      <section class="component-contact-us iv-st-from-bottom">
         <div class="container">
           <div class="contact-us-model in-about-page">
             <div class="data">
@@ -226,7 +226,7 @@
                 We are open to hear from new ideas and founders, or just to have a chat.
               </p>
               <div class="contact-info-in-about-page">
-                <div class="icon-and-info">
+                <div class="icon-and-info iv-st-from-bottom">
                   <svg class="desktop-only" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                     <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
@@ -245,7 +245,7 @@
                     <p class="paragraph-1 word-up small-fz">hello@zephyr.ai</p>
                   </div>
                 </div>
-                <div class="icon-and-info location">
+                <div class="icon-and-info iv-st-from-bottom location">
                   <svg class="desktop-only" width="20" height="23" viewBox="0 0 17 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M8.58849 11.5276C10.414 11.5276 11.8938 10.0477 11.8938 8.22228C11.8938 6.39682 10.414 4.91699 8.58849 4.91699C6.76303 4.91699 5.2832 6.39682 5.2832 8.22228C5.2832 10.0477 6.76303 11.5276 8.58849 11.5276Z"
@@ -267,7 +267,7 @@
                     <p class="paragraph-1 word-up small-fz">1-3 French Place, London, E1 6JB United Kingdom</p>
                   </div>
                 </div>
-                <div class="icon-and-info">
+                <div class="icon-and-info iv-st-from-bottom">
                   <svg class="desktop-only" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
@@ -290,12 +290,12 @@
         </div>
       </section>
       <!-- success-stories -->
-      <section class="component-success-stories">
+      <section class="component-success-stories desktop-only">
         <div class="container">
           <div class="paragraph-1 center word-up">case studies</div>
           <h1 class="headline-1 real-line-up">Other success stories</h1>
           <div class="row">
-            <div class="col-12 col-sm-6 card">
+            <div class="col-12 col-sm-6 card iv-st-from-bottom">
               <div class="image-wrapper image-wrapper-1">
                 <img src="../html/images/phone%20.png" alt="image">
               </div>
@@ -305,7 +305,7 @@
               </div>
             
             </div>
-            <div class="col-12 col-sm-6 card">
+            <div class="col-12 col-sm-6 card iv-st-from-bottom">
               <div class="image-wrapper image-wrapper-2">
                 <img src="../html/images/pangaea%20.png" alt="image">
               </div>
@@ -317,7 +317,6 @@
           </div>
         </div>
       </section>
-      
       </div>
       <!--    <script src="./main.js"></script>-->
       <script src="./main.js"></script>
