--- a/themes/zephyr/front-end/src/html/sector-expertise.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise.html
@@ -87,23 +87,24 @@
                   fill-opacity=".6" fill-rule="evenodd"/>
           </svg>
           <div class="down">
-            <svg fill="none" height="56" viewBox="0 0 24 56" width="24" xmlns="http://www.w3.org/2000/svg">
+            <svg width="24" height="56" viewBox="0 0 24 56" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0)">
-                <path clip-rule="evenodd" d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z"
-                      fill="white"
-                      fill-rule="evenodd"/>
-                <path class="dot" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white" fill-rule="evenodd"/>
-                <path clip-rule="evenodd" d="M12 53.0002L17.5 47.5002C17.9 47.1002 18.5 47.1002 18.9 47.5002C19.3 47.9002 19.3 48.5002 18.9 48.9002L12.7 55.1002C12.5 55.3002 12.2 55.4002 12 55.4002C11.8 55.4002 11.5 55.3002 11.3 55.1002L4.99995 48.9002C4.59995 48.5002 4.59995 47.9002 4.99995 47.5002C5.39995 47.1002 5.99995 47.1002 6.39995 47.5002L12 53.0002Z"
-                      fill="white"
-                      fill-rule="evenodd"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z"
+                      fill="white"/>
+                <path class="dot" fill-rule="evenodd" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white"/>
+      
+      
               </g>
               <defs>
                 <clipPath id="clip0">
-                  <rect fill="white" height="55.4" width="24"/>
+                  <rect width="24" height="55.4" fill="white"/>
                 </clipPath>
               </defs>
             </svg>
+            <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="9" viewBox="0 0 16 9"><g><g><path fill="#fff" d="M8 6L13.5.5c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.7 8.1c-.2.2-.5.3-.7.3-.2 0-.5-.1-.7-.3L1 1.9C.6 1.5.6.9 1 .5c.4-.4 1-.4 1.4 0z"/></g></g></svg>
           </div>
+
         </section>
       <!-- about-us -->
       <section class="component-about-us">
