--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -797,13 +797,13 @@
               <div class="data">
                 <h3 class="title-contact word-up center mobile-only">Send us a message</h3>
                 <form>
-                  <input class="iv-st-from-bottom" placeholder="Name" type="text">
-                  <input class="iv-st-from-bottom" placeholder="Email" type="email">
+                  <input class="iv-st-from-bottom" type="text" placeholder="Name">
+                  <input class="iv-st-from-bottom" type="email" placeholder="Email">
                   <textarea class="iv-st-from-bottom" placeholder="Message"></textarea>
                 </form>
-                <a class="btn iv-st-from-bottom" href="#">Send message</a>
-                <svg class="arrow desktop-only" fill="none" height="40" viewBox="0 0 25 40" width="25" xmlns="http://www.w3.org/2000/svg">
-                  <path clip-rule="evenodd" d="M0 20L25 40L25 0L0 20Z" fill="#333333" fill-rule="evenodd"/>
+                <a href="#" class="btn iv-st-from-bottom">Send message</a>
+                <svg class="arrow" width="25" height="40" viewBox="0 0 25 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20L25 40L25 0L0 20Z" fill="#333333"/>
                 </svg>
               </div>
               <div class="content">
@@ -813,44 +813,34 @@
                 </p>
                 <div class="contact-info">
                   <div class="icon-and-info iv-st-from-bottom">
-                    <svg class="desktop-only" fill="none" height="14" viewBox="0 0 20 14" width="20" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
-                      <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
-                      <path d="M1.1001 13.3056L8.73427 6.97803" stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
-                      <path d="M18.9999 13.3056L11.3657 6.97803" stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
+                    <svg class="desktop-only" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
+                      <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
+                      <path d="M1.1001 13.3056L8.73427 6.97803" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
+                      <path d="M18.9999 13.3056L11.3657 6.97803" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                     </svg>
-                    <svg class="mobile-only" fill="none" height="14" viewBox="0 0 20 14" width="18" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M18.9996 1H1.09961V13.3057H18.9996V1Z" fill="#6BE3A8" stroke="white" stroke-miterlimit="10" stroke-width="1.08"/>
+                    <svg class="mobile-only" width="18" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M18.9996 1H1.09961V13.3057H18.9996V1Z" fill="#6BE3A8" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
                       <path d="M1 1L10.0503 7.99337L18.9 1" fill="#6BE3A8"/>
-                      <path d="M1 1L10.0503 7.99337L18.9 1" stroke="white" stroke-miterlimit="10" stroke-width="1.08"/>
-                      <path d="M1.09961 13.3056L8.73378 6.97803" stroke="white" stroke-miterlimit="10" stroke-width="1.08"/>
-                      <path d="M19.0004 13.3056L11.3662 6.97803" stroke="white" stroke-miterlimit="10" stroke-width="1.08"/>
+                      <path d="M1 1L10.0503 7.99337L18.9 1" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
+                      <path d="M1.09961 13.3056L8.73378 6.97803" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
+                      <path d="M19.0004 13.3056L11.3662 6.97803" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
                     </svg>
-                    <p class="paragraph-1 small-fz">hello@zephyr.ai</p>
+                    <div class="info">
+                      <h3 class="text desktop-only">By Email</h3>
+                      <a class="paragraph-1 word-up small-fz" href="mailto:hello@zephyr.ai">hello@zephyr.ai</a>
+                    </div>
                   </div>
-                  <div class="icon-and-info iv-st-from-bottom">
-                    <svg class="desktop-only" fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
-                        stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
-                    </svg>
-                    <svg class="mobile-only" fill="none" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M2.87135 0.012474C2.85473 -0.004158 2.82979 -0.004158 2.81317 0.012474L0.00771825 2.81913C-0.308155 8.97713 9.14309 17.9335 15.1821 18L17.9875 15.1933C18.0042 15.1767 18.0042 15.1518 17.9875 15.1351L13.4947 10.6403C13.478 10.6237 13.4531 10.6237 13.4365 10.6403L11.2877 12.79C9.66262 12.711 5.44821 8.20374 5.21962 6.71934L7.36839 4.56965C7.38501 4.55301 7.38501 4.52807 7.36839 4.51143L2.87135 0.012474Z"
-                        fill="#6BE3A8"/>
-                    </svg>
-                    <p class="paragraph-1 small-fz">+44 07887 552949</p>
-                  </div>
-                  <div class="icon-and-info iv-st-from-bottom">
-                    <svg class="desktop-only" fill="none" height="23" viewBox="0 0 17 23" width="20" xmlns="http://www.w3.org/2000/svg">
+                  <div class="icon-and-info iv-st-from-bottom location">
+                    <svg class="desktop-only" width="20" height="23" viewBox="0 0 17 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M8.58849 11.5276C10.414 11.5276 11.8938 10.0477 11.8938 8.22228C11.8938 6.39682 10.414 4.91699 8.58849 4.91699C6.76303 4.91699 5.2832 6.39682 5.2832 8.22228C5.2832 10.0477 6.76303 11.5276 8.58849 11.5276Z"
-                        stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
+                        stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                       <path
                         d="M8.58803 1C2.11284 1 -0.758283 8.18014 2.71507 13.0214C4.78321 15.9065 7.78505 20.2902 8.58803 21.4713C9.39101 20.2949 12.3928 15.9065 14.461 13.0214C17.9343 8.18014 15.0586 1 8.58803 1Z"
-                        stroke="#252525" stroke-miterlimit="10" stroke-width="1.08"/>
+                        stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                     </svg>
-                    <svg class="mobile-only" fill="none" height="21" viewBox="0 0 15 21" width="18" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="mobile-only" width="18" height="21" viewBox="0 0 15 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M7.58754 0C1.11235 0 -1.75877 7.18014 1.71458 12.0214C3.78272 14.9065 6.78456 19.2902 7.58754 20.4713C8.39052 19.2949 11.3924 14.9065 13.4605 12.0214C16.9339 7.18014 14.0581 0 7.58754 0Z"
                         fill="#6BE3A8"/>
@@ -858,13 +848,33 @@
                         d="M7.58849 10.5276C9.41396 10.5276 10.8938 9.04774 10.8938 7.22228C10.8938 5.39682 9.41396 3.91699 7.58849 3.91699C5.76303 3.91699 4.2832 5.39682 4.2832 7.22228C4.2832 9.04774 5.76303 10.5276 7.58849 10.5276Z"
                         fill="white"/>
                     </svg>
-                    <p class="paragraph-1 small-fz">1-3 French Street London E1 6JB</p>
+                    <div class="info">
+                      <h3 class="text desktop-only">Over A Cuppa</h3>
+                      <p class="paragraph-1 word-up small-fz">1-3 French Place, London, E1 6JB United Kingdom</p>
+                    </div>
+                  </div>
+                  <div class="icon-and-info iv-st-from-bottom">
+                    <svg class="desktop-only" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
+                        stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
+                    </svg>
+                    <svg class="mobile-only" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M2.87135 0.012474C2.85473 -0.004158 2.82979 -0.004158 2.81317 0.012474L0.00771825 2.81913C-0.308155 8.97713 9.14309 17.9335 15.1821 18L17.9875 15.1933C18.0042 15.1767 18.0042 15.1518 17.9875 15.1351L13.4947 10.6403C13.478 10.6237 13.4531 10.6237 13.4365 10.6403L11.2877 12.79C9.66262 12.711 5.44821 8.20374 5.21962 6.71934L7.36839 4.56965C7.38501 4.55301 7.38501 4.52807 7.36839 4.51143L2.87135 0.012474Z"
+                        fill="#6BE3A8"/>
+                    </svg>
+                    <div class="info">
+                      <h3 class="text desktop-only">Over the Phone</h3>
+                      <a class="paragraph-1 word-up small-fz" href="tel:+44 07887 552949">+44 07887 552949</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
+
       </div>
       <!--    <script src="./main.js"></script>-->
       <script src="./main.js"></script>
