--- a/themes/zephyr/front-end/src/html/say-hello.html
+++ b/themes/zephyr/front-end/src/html/say-hello.html
@@ -82,18 +82,18 @@
           </div>
         </section>
         <!-- contact us-->
-        <section class="component-contact-us">
+        <section class="component-contact-us iv-st-from-bottom">
           <div class="container">
             <div class="contact-us-model">
               <div class="data">
-                <h3 class="title-contact iv-st-from-bottom center mobile-only">Send us a message</h3>
+                <h3 class="title-contact word-up center mobile-only">Send us a message</h3>
                 <form>
                   <input class="iv-st-from-bottom" type="text" placeholder="Name">
                   <input class="iv-st-from-bottom" type="email" placeholder="Email">
                   <textarea class="iv-st-from-bottom" placeholder="Message"></textarea>
                 </form>
                 <a href="#" class="btn iv-st-from-bottom">Send message</a>
-                <svg class="arrow desktop-only" width="25" height="40" viewBox="0 0 25 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="arrow" width="25" height="40" viewBox="0 0 25 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20L25 40L25 0L0 20Z" fill="#333333"/>
                 </svg>
               </div>
@@ -117,22 +117,12 @@
                       <path d="M1.09961 13.3056L8.73378 6.97803" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
                       <path d="M19.0004 13.3056L11.3662 6.97803" stroke="white" stroke-width="1.08" stroke-miterlimit="10"/>
                     </svg>
-                    <p class="paragraph-1 small-fz">hello@zephyr.ai</p>
+                    <div class="info">
+                      <h3 class="text desktop-only">By Email</h3>
+                      <a class="paragraph-1 word-up small-fz" href="mailto:hello@zephyr.ai">hello@zephyr.ai</a>
+                    </div>
                   </div>
-                  <div class="icon-and-info iv-st-from-bottom">
-                    <svg class="desktop-only" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
-                        stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
-                    </svg>
-                    <svg class="mobile-only" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M2.87135 0.012474C2.85473 -0.004158 2.82979 -0.004158 2.81317 0.012474L0.00771825 2.81913C-0.308155 8.97713 9.14309 17.9335 15.1821 18L17.9875 15.1933C18.0042 15.1767 18.0042 15.1518 17.9875 15.1351L13.4947 10.6403C13.478 10.6237 13.4531 10.6237 13.4365 10.6403L11.2877 12.79C9.66262 12.711 5.44821 8.20374 5.21962 6.71934L7.36839 4.56965C7.38501 4.55301 7.38501 4.52807 7.36839 4.51143L2.87135 0.012474Z"
-                        fill="#6BE3A8"/>
-                    </svg>
-                    <p class="paragraph-1 small-fz">+44 07887 552949</p>
-                  </div>
-                  <div class="icon-and-info iv-st-from-bottom">
+                  <div class="icon-and-info iv-st-from-bottom location">
                     <svg class="desktop-only" width="20" height="23" viewBox="0 0 17 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M8.58849 11.5276C10.414 11.5276 11.8938 10.0477 11.8938 8.22228C11.8938 6.39682 10.414 4.91699 8.58849 4.91699C6.76303 4.91699 5.2832 6.39682 5.2832 8.22228C5.2832 10.0477 6.76303 11.5276 8.58849 11.5276Z"
@@ -149,7 +139,26 @@
                         d="M7.58849 10.5276C9.41396 10.5276 10.8938 9.04774 10.8938 7.22228C10.8938 5.39682 9.41396 3.91699 7.58849 3.91699C5.76303 3.91699 4.2832 5.39682 4.2832 7.22228C4.2832 9.04774 5.76303 10.5276 7.58849 10.5276Z"
                         fill="white"/>
                     </svg>
-                    <p class="paragraph-1 small-fz">1-3 French Street London E1 6JB</p>
+                    <div class="info">
+                      <h3 class="text desktop-only">Over A Cuppa</h3>
+                      <p class="paragraph-1 word-up small-fz">1-3 French Place, London, E1 6JB United Kingdom</p>
+                    </div>
+                  </div>
+                  <div class="icon-and-info iv-st-from-bottom">
+                    <svg class="desktop-only" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
+                        stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
+                    </svg>
+                    <svg class="mobile-only" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M2.87135 0.012474C2.85473 -0.004158 2.82979 -0.004158 2.81317 0.012474L0.00771825 2.81913C-0.308155 8.97713 9.14309 17.9335 15.1821 18L17.9875 15.1933C18.0042 15.1767 18.0042 15.1518 17.9875 15.1351L13.4947 10.6403C13.478 10.6237 13.4531 10.6237 13.4365 10.6403L11.2877 12.79C9.66262 12.711 5.44821 8.20374 5.21962 6.71934L7.36839 4.56965C7.38501 4.55301 7.38501 4.52807 7.36839 4.51143L2.87135 0.012474Z"
+                        fill="#6BE3A8"/>
+                    </svg>
+                    <div class="info">
+                      <h3 class="text desktop-only">Over the Phone</h3>
+                      <a class="paragraph-1 word-up small-fz" href="tel:+44 07887 552949">+44 07887 552949</a>
+                    </div>
                   </div>
                 </div>
               </div>
