--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -161,44 +161,44 @@
             <h1 class="headline-1 word-up">…and some more established ones.</h1>
             <div class="row justify-content-start justify-content-xl-between align-items-center">
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-1.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-1.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-2.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-2.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-3.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-3.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-4.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-4.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-5.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-5.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-6.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-6.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-7.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-7.png" alt="logo">
+                </a>
               </div>
               <div class="col-6 col-md-4 col-xl-3">
-                <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="logo" src="../html/images/logo-8.png">
-                </div>
+                <a href="#" class="image-wrapper iv-st-from-bottom">
+                  <img src="../html/images/logo-8.png" alt="logo">
+                </a>
               </div>
             </div>
           </div>
