--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -99,16 +99,13 @@
           <div class="container">
             <div class="paragraph-1 word-up desktop-only">CASE STUDIES</div>
             <h1 class="headline-1 real-line-up">We collaborate with exciting new companies…</h1>
-            <div class="row">
-              <div class="col-12 bike-image">
-                <div class="image-wrapper" data-reveal-direction="left">
-                  <img alt="image" src="../html/images/home-image%20.png">
-                </div>
-                <div class="content">
-                  <h5 class="headline-5 word-up">Fully Charged</h5>
-                  <h4 class="headline-4 real-line-up">Kickstarting the eBike revolution.</h4>
-                </div>
-              </div>
+            <div class="image-wrapper">
+              <img alt="cara" class="cara" src="./images/cara.png">
+              <img alt="macbook" class="mac" src="./images/macbook.png">
+            </div>
+            <div class="content">
+              <h5 class="headline-5">Fully Charged</h5>
+              <h4 class="headline-4">Kickstarting the eBike revolution.</h4>
             </div>
           </div>
         </section>
