--- a/themes/zephyr/front-end/src/html/sector-expertise2.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise2.html
@@ -560,7 +560,7 @@
             <h1 class="headline-1 real-line-up">Other success stories</h1>
             <div class="row">
               <div class="col-12 col-sm-6 card">
-                <div class="image-wrapper image-wrapper-1">
+                <div class="image-wrapper">
                   <img src="./images/bg-black.png" alt="bg-black">
                   <img style="top: -2.2rem;" class="iphone-frame" src="./images/iPhone9-fram.png" alt="iPhone9-fram">
                 </div>
@@ -568,10 +568,9 @@
                   <h5 class="headline-5 word-up">Spencer hart</h5>
                   <h4 class="headline-4 real-line-up">Ultra premium men’s tailoring.</h4>
                 </div>
-        
               </div>
               <div class="col-12 col-sm-6 card">
-                <div class="image-wrapper image-wrapper-2">
+                <div class="image-wrapper">
                   <img src="./images/bkueerectangle_8.png" alt="bkueerectangle">
                   <img class="logo" src="./images/pangaea.png" alt="pangaea">
                 </div>
